Make sure SystemContext.PROFILES is immutable, make SystemContext.IS_GUI_MODE a field + Code comments